objects/ESNProject__c.object
<CustomObject>
    <description>Project Management.</description>
    <fields>
        <fullName>Contributor1Email__c</fullName>
        <label>Contributor # 1 email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contributor2Email__c</fullName>
        <label>Contributor # 2 email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contributor_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contributor #10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectsMOlv</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contributor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contributor #1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contributor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contributor #2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESN_ActualEndDate__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ESN_ActualStartDate__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>Planned End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumberOfCloseStream__c</fullName>
        <label># Closed Stream</label>
        <summaryFilterItems>
            <field>ESNStream__c.Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>ESNStream__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfOpenStream__c</fullName>
        <label># Open Stream</label>
        <summaryFilterItems>
            <field>ESNStream__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Close, Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>ESNStream__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectManagerEmail__c</fullName>
        <label>Project manager email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ProjectManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SponsorEmail__c</fullName>
        <label>Sponsor email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectTeam</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Planned Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkloadEstimation__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Man/Days</inlineHelpText>
        <label>Workload Estimation</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkloadReal__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Man/Days</inlineHelpText>
        <label>Workload Real</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>Allproject</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Priority__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Project</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Projects</fullName>
        <columns>NAME</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>ProjectManager__c</columns>
        <columns>Sponsor__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Projects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>ProductLaunch</fullName>
        <active>true</active>
        <description>Use this record to create a project.</description>
        <label>Project Management</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PRJ_VR01_EndDateAfterStartDate</fullName>
        <active>false</active>
        <description>This validation rule checks that the end date is after the start date.</description>
        <errorConditionFormula>NOT( $User.BypassVR__c)
&amp;&amp;
EndDate__c  &lt;  StartDate__c</errorConditionFormula>
        <errorDisplayField>EndDate__c</errorDisplayField>
        <errorMessage>End Date should be after the Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRJ_VR02_Stream_ControlDateConsistency</fullName>
        <active>true</active>
        <description>You cannot enter a Start Date greater that the End Date. Please check and correct data (either Planned Date or Actual Date).</description>
        <errorConditionFormula>AND(NOT( $User.BypassVR__c), OR(StartDate__c &gt; EndDate__c, ESN_ActualStartDate__c &gt; ESN_ActualEndDate__c ))</errorConditionFormula>
        <errorMessage>You cannot enter a Start Date greater that the End Date. Please check and correct data (either Planned Date or Actual Date).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRJ_VR03_PlannedDateNotChange</fullName>
        <active>true</active>
        <description>You cannot modified Planned Start Date and Planned End Date after creation.</description>
        <errorConditionFormula>AND( 
	NOT( $User.BypassVR__c ) , 
	AND( 
		OR( 
			AND(ISCHANGED( StartDate__c ), NOT(ISBLANK(PRIORVALUE(StartDate__c)))) , 
			AND(ISCHANGED( EndDate__c ), NOT(ISBLANK(PRIORVALUE(EndDate__c))))
		) 
	)
)</errorConditionFormula>
        <errorMessage>You cannot modified either Planned Start Date or Planned End Date after creation. Please contact your Administrator for more information.</errorMessage>
    </validationRules>
</CustomObject>